add_executable(MinMaxOperation.test MinMaxOperation.test.cpp)
add_test(NAME MinMaxOperation COMMAND MinMaxOperation.test)
add_executable(Random.test Random.test.cpp)
add_test(NAME Random COMMAND Random.test)
add_executable(Macro.test Macro.test.cpp)
add_test(NAME Macro COMMAND Macro.test)
add_executable(Macro.WhenSubmit.test Macro.WhenSubmit.test.cpp)
add_test(NAME Macro.WhenSubmit COMMAND Macro.WhenSubmit.test)
add_executable(Strings.test Strings.test.cpp)
add_test(NAME Strings COMMAND Strings.test)
add_executable(Grid.test Grid.test.cpp)
add_test(NAME Grid COMMAND Grid.test)
